--- a/rtl/constraints.ucf
+++ b/rtl/constraints.ucf
@@ -101,10 +101,10 @@
 #NET IIC_SCL_MAIN IOSTANDARD = LVCMOS33;
 #NET IIC_SDA_MAIN LOC = F8;
 #NET IIC_SDA_MAIN IOSTANDARD = LVCMOS33;
-#NET IIC_SCL_VIDEO LOC = U27;
-#NET IIC_SCL_VIDEO IOSTANDARD = SSTL18_II;
-#NET IIC_SDA_VIDEO LOC = T29;
-#NET IIC_SDA_VIDEO IOSTANDARD = SSTL18_II;
+NET IIC_SCL_VIDEO LOC = U27;
+NET IIC_SCL_VIDEO IOSTANDARD = SSTL18_II;
+NET IIC_SDA_VIDEO LOC = T29;
+NET IIC_SDA_VIDEO IOSTANDARD = SSTL18_II;
 #NET IIC_SCL_SFP LOC = R26;
 #NET IIC_SCL_SFP IOSTANDARD = SSTL18_II;
 #NET IIC_SDA_SFP LOC = U28;
@@ -117,36 +117,36 @@
 #NET MOUSE_DATA LOC = U26;
 #NET MOUSE* IOSTANDARD = SSTL18_II;
 #
-#NET VGA_IN_DATA_CLK LOC = AH18;
-#NET VGA_IN_BLUE<0> LOC = AC4;
-#NET VGA_IN_BLUE<1> LOC = AC5;
-#NET VGA_IN_BLUE<2> LOC = AB6;
-#NET VGA_IN_BLUE<3> LOC = AB7;
-#NET VGA_IN_BLUE<4> LOC = AA5;
-#NET VGA_IN_BLUE<5> LOC = AB5;
-#NET VGA_IN_BLUE<6> LOC = AC7;
-#NET VGA_IN_BLUE<7> LOC = AD7;
-#NET VGA_IN_GREEN<0> LOC = Y8;
-#NET VGA_IN_GREEN<1> LOC = Y9;
-#NET VGA_IN_GREEN<2> LOC = AD4;
-#NET VGA_IN_GREEN<3> LOC = AD5;
-#NET VGA_IN_GREEN<4> LOC = AA6;
-#NET VGA_IN_GREEN<5> LOC = Y7;
-#NET VGA_IN_GREEN<6> LOC = AD6;
-#NET VGA_IN_GREEN<7> LOC = AE6;
-#NET VGA_IN_RED<0> LOC = AG5;
-#NET VGA_IN_RED<1> LOC = AF5;
-#NET VGA_IN_RED<2> LOC = W7;
-#NET VGA_IN_RED<3> LOC = V7;
-#NET VGA_IN_RED<4> LOC = AH5;
-#NET VGA_IN_RED<5> LOC = AG6;
-#NET VGA_IN_RED<6> LOC = Y11;
-#NET VGA_IN_RED<7> LOC = W11;
-#NET VGA_IN_HSOUT LOC = AE7;
-#NET VGA_IN_ODD_EVEN_B LOC = W6;
-#NET VGA_IN_SOGOUT LOC = AF6;
-#NET VGA_IN_VSOUT LOC = Y6;
-#NET VGA* IOSTANDARD = LVCMOS33;
+NET VGA_IN_DATA_CLK LOC = AH18;
+NET VGA_IN_BLUE<0> LOC = AC4;
+NET VGA_IN_BLUE<1> LOC = AC5;
+NET VGA_IN_BLUE<2> LOC = AB6;
+NET VGA_IN_BLUE<3> LOC = AB7;
+NET VGA_IN_BLUE<4> LOC = AA5;
+NET VGA_IN_BLUE<5> LOC = AB5;
+NET VGA_IN_BLUE<6> LOC = AC7;
+NET VGA_IN_BLUE<7> LOC = AD7;
+NET VGA_IN_GREEN<0> LOC = Y8;
+NET VGA_IN_GREEN<1> LOC = Y9;
+NET VGA_IN_GREEN<2> LOC = AD4;
+NET VGA_IN_GREEN<3> LOC = AD5;
+NET VGA_IN_GREEN<4> LOC = AA6;
+NET VGA_IN_GREEN<5> LOC = Y7;
+NET VGA_IN_GREEN<6> LOC = AD6;
+NET VGA_IN_GREEN<7> LOC = AE6;
+NET VGA_IN_RED<0> LOC = AG5;
+NET VGA_IN_RED<1> LOC = AF5;
+NET VGA_IN_RED<2> LOC = W7;
+NET VGA_IN_RED<3> LOC = V7;
+NET VGA_IN_RED<4> LOC = AH5;
+NET VGA_IN_RED<5> LOC = AG6;
+NET VGA_IN_RED<6> LOC = Y11;
+NET VGA_IN_RED<7> LOC = W11;
+NET VGA_IN_HSOUT LOC = AE7;
+NET VGA_IN_ODD_EVEN_B LOC = W6;
+NET VGA_IN_SOGOUT LOC = AF6;
+NET VGA_IN_VSOUT LOC = Y6;
+NET VGA* IOSTANDARD = LVCMOS33;
 
 NET GPIO_SW_C LOC = AJ6;
 NET GPIO_SW_E LOC = AK7;
@@ -182,12 +182,12 @@ NET GPIO_LED<6> IOSTANDARD = SSTL18_II;
 NET GPIO_LED<7> LOC = AE24;
 NET GPIO_LED<7> IOSTANDARD = SSTL18_II;
 
-#NET GPIO_LED_C LOC = E8;
-#NET GPIO_LED_W LOC = AF23;
-#NET GPIO_LED_E LOC = AG23;
-#NET GPIO_LED_N LOC = AF13;
-#NET GPIO_LED_S LOC = AG12;
-#NET GPIO_LED_* IOSTANDARD = LVCMOS33;
+NET GPIO_LED_C LOC = E8;
+NET GPIO_LED_W LOC = AF23;
+NET GPIO_LED_E LOC = AG23;
+NET GPIO_LED_N LOC = AF13;
+NET GPIO_LED_S LOC = AG12;
+NET GPIO_LED_* IOSTANDARD = LVCMOS33;
 
 NET DDR2_D<0> LOC = AF30;
 NET DDR2_D<1> LOC = AK31;
@@ -337,25 +337,25 @@ NET DDR2_DQS_N* IOSTANDARD = DIFF_SSTL18_II_DCI;
 #NET PIEZO_SPEAKER LOC = G30;
 #NET PIEZO_SPEAKER IOSTANDARD = SSTL18_II;
 #
-#NET DVI_D<0> LOC = AB8;
-#NET DVI_D<1> LOC = AC8;
-#NET DVI_D<2> LOC = AN12;
-#NET DVI_D<3> LOC = AP12;
-#NET DVI_D<4> LOC = AA9;
-#NET DVI_D<5> LOC = AA8;
-#NET DVI_D<6> LOC = AM13;
-#NET DVI_D<7> LOC = AN13;
-#NET DVI_D<8> LOC = AA10;
-#NET DVI_D<9> LOC = AB10;
-#NET DVI_D<10> LOC = AP14;
-#NET DVI_D<11> LOC = AN14;
-#NET DVI_DE LOC = AE8;
-#NET DVI_H LOC = AM12;
-#NET DVI_RESET_B LOC = AK6;
-#NET DVI_V LOC = AM11;
-#NET DVI_XCLK_N LOC = AL10;
-#NET DVI_XCLK_P LOC = AL11;
-#NET DVI_* IOSTANDARD = LVCMOS33;
+NET DVI_D<0> LOC = AB8;
+NET DVI_D<1> LOC = AC8;
+NET DVI_D<2> LOC = AN12;
+NET DVI_D<3> LOC = AP12;
+NET DVI_D<4> LOC = AA9;
+NET DVI_D<5> LOC = AA8;
+NET DVI_D<6> LOC = AM13;
+NET DVI_D<7> LOC = AN13;
+NET DVI_D<8> LOC = AA10;
+NET DVI_D<9> LOC = AB10;
+NET DVI_D<10> LOC = AP14;
+NET DVI_D<11> LOC = AN14;
+NET DVI_DE LOC = AE8;
+NET DVI_H LOC = AM12;
+NET DVI_RESET_B LOC = AK6;
+NET DVI_V LOC = AM11;
+NET DVI_XCLK_N LOC = AL10;
+NET DVI_XCLK_P LOC = AL11;
+NET DVI_* IOSTANDARD = LVCMOS33;
 #NET DVI_GPIO1 LOC = N30;
 #NET DVI_GPIO1 IOSTANDARD = SSTL18_II;
 
@@ -388,6 +388,12 @@ NET CSTN_UD<5> LOC = AM32;
 NET CSTN_UD<6> LOC = AN34;
 NET CSTN_UD<7> LOC = AN33;
 NET CSTN_* IOSTANDARD = LVCMOS33;
+
+NET DEBUG_1 LOC = H33;
+NET DEBUG_2 LOC = F34;
+NET DEBUG_3 LOC = H34;
+NET DEBUG_4 LOC = G33;
+NET DEBUG_* IOSTANDARD = LVCMOS33;
 
 NET FPGA_CPU_RESET_B LOC = E9;
 NET FPGA_CPU_RESET_B IOSTANDARD = LVCMOS33;
